--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,19 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+		
+				
+		<!--link href=".\node_modules\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet" >
+		<link href=".\node_modules\bootstrap-icons\font\bootstrap-icons.css" rel="stylesheet" -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>React App</title>
   </head>
+  <style>
+  .red-color {
+    color:red;
+    }
+    </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
